# Practice-of-Projects

./: .gitignore  CMakeLists.txt  README.md  resource.rc
assets/lang/: en_US.ts  zh_CN.ts  zh_TW.ts
config/: bannedWords.txt  banned_words.cfg
doc/: EA flowchart.drawio
doc/backup/algorithm/: Diagram.drawio
doc/backup/algorithm/c++_call_py_exp/: New Text Document.txt
doc/backup/crawler/Web_Crawler/: .project
doc/backup/crawler/Web_Crawler/src/Crawler/: ex.java
doc/backup/crawler/Web_Crawler/src/Final_test/: Scraper.java  command.txt
doc/backup/爬蟲/: 參考網站.txt
doc/backup/爬蟲/Web_Crawler/jsoup_test/: .project
doc/backup/爬蟲/Web_Crawler/jsoup_test/src/jsoup_test/: ex.java
doc/backup/爬蟲/Web_Crawler/src/Crawler/: test_1.java
doc/backup/爬蟲/Web_Crawler/src/Final_test/: CDemo.cpp
doc/backup/計算函式/: testfile.txt  測試用_勿動.cpp
doc/backup/計算函式/c++_call_py_exp/: great_module.py  vsc++.cpp
doc/ui/: userInterfaceMap.drawio
include/: Config.h  ConfigHandler.h  Crawler.h  LanguageTypes.h  MainWindow.h  OnlineTranslator.h  ProjectInfo.h  Question.h  Questions.h  Solution.h  Strings.h  TestingResult.h
include/english_assistance/: config.h  crawler.h  info.h  lang.h  question.h  translate.h  util.h  xpm.h
include/english_assistance/ui/: main_window.h  xpm.h
lib/crawler/: .ninja_log  Crawler.java  Scraper.java  build.ninja
src/: Config.cpp  Crawler.cpp  MainWindow.cpp  OnlineTranslator.cpp  Question.cpp  Questions.cpp  Solution.cpp  Strings.cpp  english-helper.cpp  main.cpp  測試用_勿動.cpp
src/english_assistance/: config.cpp  crawler.cpp  main.cpp  question.cpp  translate.cpp  util.cpp  xpm.cpp
src/english_assistance/ui/: main_window.cpp  xpm.cpp
ui/: CMakeLists.txt  CMakeLists.txt.bak
ui/assets/lang/: en-US.ts  en_US.ts  en_us.ts  zh-CN.ts  zh-TW.ts  zh_CN.ts  zh_TW.ts  zh_cn.ts  zh_tw.ts
ui/etc/: googleTranslateData.txt
ui/include/: Crawler.h  LanguageTypes.h  LearningPanel.h  MainPanel.h  MainWindow.h  OnlineTranslator.h  Solution.h
ui/lib/crawler/: .ninja_log  Scraper.java
ui/lib/tmp/checkbox/: widget.cpp  widget.h  widget.ui
ui/lib/tmp/translator/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
ui/lib/tmp/translator/debug/: moc_mainwindow.cpp  qrc_resource.cpp
ui/src/: Crawler.cpp  EnglishTutor.cpp  LearningPanel.cpp  MainPanel.cpp  MainWindow.cpp  OnlineTranslator.cpp  Solution.cpp  main.cpp
爬蟲/: 參考網站.txt
爬蟲/Web_Crawler/: .classpath  .project
爬蟲/Web_Crawler/src/Crawler/: Ex3.java  Scrap_Some_Contant.java  Web_Scraper.java  ex2.java
爬蟲/Web_Crawler/src/Final_test/: Scraper.java  Scraper.java.bak  ex.java  excute.cpp
計算函式/: Diagram.drawio  sort.cpp
頻率計算函式/: sort.cpp
